# pairtext

./: LICENSE  README.md  pyproject.toml
pairtext/: __init__.py  aligner.py  cli.py  core.py  datatypes.py  gaps.py  tokenize.py  utils.py
tests/: test_aligner.py  test_alignmentresult.py  test_gaps.py  test_utils.py  tom_sawyer_de.txt  tom_sawyer_en.txt
