[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pairtext"
version = "0.1.0"
description = "Simple tool for aligning machine translated sentences to the original text."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["sentence-transformers >= 3", "numpy", "wtpsplit"]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/dturaev/pairtext"
Issues = "https://github.com/dturaev/pairtext/issues"

[project.scripts]
pairtext = "pairtext.cli:main"
